--- a/po/ja_JP/pcp.po
+++ b/po/ja_JP/pcp.po
@@ -11,9 +11,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 03:17+0000\n"
-"Last-Translator: Satomi Sato <puritira2015@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:06+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Japanese (http://www.transifex.com/civicrm/civicrm/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,6 +37,10 @@ msgstr "ページの編集"
 msgid "Tell Friends"
 msgstr "友人に紹介"
 
+#: CRM/PCP/BAO/PCP.php
+msgid "URL for this Page"
+msgstr "このページのURL"
+
 #: CRM/PCP/BAO/PCP.php CRM/PCP/Form/PCPAccount.php
 msgid "Update Contact Information"
 msgstr "連絡先情報の更新"
@@ -50,8 +54,8 @@ msgid "Approval required"
 msgstr "承認が必要"
 
 #: CRM/PCP/BAO/PCP.php
-msgid "Supporter profile"
-msgstr "サポータのプロファイル"
+msgid "Owner Email Notification"
+msgstr "所有者のメール通知"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Allow 'Tell a friend' functionality"
@@ -71,15 +75,15 @@ msgstr "「個人キャンペーンページを作成」のリンクテキスト
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
-"This event registration is being made thanks to effort of "
+"This event registration is being made thanks to the efforts of "
 "<strong>%1</strong>, who supports our campaign. "
-msgstr "このイベント登録は、私たちのキャンペーンをサポートして頂いている<strong>%1</strong>の努力によって作成されました。"
+msgstr "このイベント登録は、私たちのキャンペーンをサポートしてくれている<strong>%1</strong>の努力によって作成されました。"
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
-"This contribution is being made thanks to effort of <strong>%1</strong>, who"
-" supports our campaign. "
-msgstr "この支援は、私たちのキャンペーンをサポートして頂いている<strong>%1</strong>の努力によって作成されました。"
+"This contribution is being made thanks to the efforts of "
+"<strong>%1</strong>, who supports our campaign. "
+msgstr "この支援は、私たちのキャンペーンをサポートしてくれている<strong>%1</strong>の努力によって作成されました。"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Show my support in the public honor roll"
@@ -155,6 +159,12 @@ msgid ""
 "is disabled. Please contact the site administrator if you need assistance."
 msgstr "支援者プロファイルがこの個人キャンペーンページに設定されていないか、プロファイルが無効になっています。サポートが必要であれば、サイトの管理者に連絡してください。"
 
+#: CRM/PCP/BAO/PCP.php
+msgid ""
+"Owner Notification is not set for this Personal Campaign Page. Please "
+"contact the site administrator if you need assistance."
+msgstr "この個人キャンペーンページにはオーナー通知が設定されていません。サイト管理者にお問い合わせください。"
+
 #: CRM/PCP/DAO/PCP.php
 msgid "Personal Campaign Page ID"
 msgstr "個人キャンペーンページID"
@@ -189,6 +199,10 @@ msgid "Target Entity Type"
 msgstr "ターゲットのエンティティタイプ"
 
 #: CRM/PCP/DAO/PCPBlock.php
+msgid "Owner Notification"
+msgstr "オーナー通知"
+
+#: CRM/PCP/DAO/PCPBlock.php
 msgid "Tellfriend Limit"
 msgstr "友人に紹介の上限"
 
@@ -203,6 +217,10 @@ msgstr "個人キャンペーンページの設定 - ステップ 2"
 #: CRM/PCP/Form/Campaign.php
 msgid "Edit Your Personal Campaign Page"
 msgstr "自分の個人キャンペーンページの編集"
+
+#: CRM/PCP/Form/Campaign.php
+msgid "Welcome"
+msgstr ""
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Your Goal"
@@ -237,26 +255,16 @@ msgid "Honor Roll"
 msgstr "表彰ロール"
 
 #: CRM/PCP/Form/Campaign.php
+msgid "Notify me via email when someone donates to my page"
+msgstr "自分のページに寄付があった場合はメールで通知"
+
+#: CRM/PCP/Form/Campaign.php
 msgid "Goal Amount should be a numeric value greater than zero."
 msgstr "目標金額を正数の値で入力してください。"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Button Text must be less than 64 characters."
 msgstr "ボタンのテキストは64文字以内です。"
-
-#: CRM/PCP/Form/Campaign.php
-msgid ""
-"Your picture or image file cannot be larger than 360 x 360 pixels in size."
-msgstr "画像ファイルは 360x360 以下のサイズにしてください。"
-
-#: CRM/PCP/Form/Campaign.php
-msgid "The dimensions of the image you have selected are %1 x %2."
-msgstr "選択された画像のサイズは %1 x %2 です。"
-
-#: CRM/PCP/Form/Campaign.php
-msgid ""
-"Please shrink or crop the file or find another smaller image and try again."
-msgstr "ファイルを小さくしたり周囲をカットするか、別の小さい画像を選んでやり直してください。"
 
 #: CRM/PCP/Form/Campaign.php
 msgid ""
@@ -362,10 +370,6 @@ msgstr "プレッジを有効"
 msgid "Source Type"
 msgstr "ソースタイプ"
 
-#: CRM/PCP/Form/PCP.php
-msgid "Event Page"
-msgstr "イベントページ"
-
 #: CRM/PCP/Form/PCPAccount.php
 msgid ""
 "We can't load the requested web page due to an incomplete link. This can be "
@@ -440,6 +444,10 @@ msgid "Send emails inviting your friends to support your campaign!"
 msgstr "キャンペーンへの支援に友人を招待するメールを送信"
 
 #: CRM/PCP/Page/PCPInfo.php
+msgid "Copy this link to share directly with your network!"
+msgstr "ネットワークで直接共有する場合は、このリンクをコピーしてください！"
+
+#: CRM/PCP/Page/PCPInfo.php
 msgid "Update your personal contact information"
 msgstr "個人連絡先情報の更新"
 
@@ -479,9 +487,15 @@ msgstr "支援または登録ボタンにつけるテキスト"
 #: templates/CRM/PCP/Form/Campaign.tpl
 msgid ""
 "If this option is checked, an \"honor roll\" will be displayed with the "
-"names (or nicknames) of the people who supported your campaign. (People will"
-" have the option to remain anonymous. Their names will NOT be listed.)"
-msgstr "このオプションをチェックすると、あなたのキャンペーンを支援してくれた人々の名前 (またはニックネーム) が「表彰ロール」に表示されます。(名前を表示せず、匿名にすることもできます)"
+"names (or nicknames) of the people who supported you. (Donors will have the "
+"option to remain anonymous. Their names will NOT be listed.)"
+msgstr "このオプションをチェックすると、あなたを支援してくれた人々の名前 (またはニックネーム) が「表彰ロール」に表示されます。(寄贈者の名前を表示せず、匿名にすることもできます)"
+
+#: templates/CRM/PCP/Form/Campaign.tpl
+msgid ""
+"If this option is checked, you will receive an email notification when "
+"people contribute to your campaign."
+msgstr "このオプションを選択した場合、人々がキャンペーンに支援した際に、あなたはメールで通知を受信できます。"
 
 #: templates/CRM/PCP/Form/Contribute.hlp
 msgid ""
@@ -491,10 +505,6 @@ msgid ""
 "Campaign Page are recorded as \"soft credits\" for the supporter who created"
 " that campaign page."
 msgstr "個人キャンペーンページを有効にすると、会員が支援を作成した後に自分の資金調達ページを作成することを促すリンクが表示されます。個人キャンペーンページから入ってきた人による支援は、そのキャンペーンページを作成した支援者の「ソフトクレジット」として記録されます。"
-
-#: templates/CRM/PCP/Form/Contribute.hlp
-msgid "Approval"
-msgstr "承認"
 
 #: templates/CRM/PCP/Form/Contribute.hlp templates/CRM/PCP/Form/Event.hlp
 msgid "Email Notification"
@@ -730,6 +740,38 @@ msgstr "ページ表示"
 msgid "Linked to Contribution Page"
 msgstr "支援ページにリンク済"
 
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "You have received a donation at your personal page"
+msgstr "個人ページで寄付を受け取りました"
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "Your fundraising total has been updated."
+msgstr "あなたの募金総額が更新されました。"
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid ""
+"The donor's information is listed below.  You can choose to contact them and"
+" convey your thanks if you wish."
+msgstr "寄贈者の情報リストは以下のとおりです。希望する場合は、感謝を連絡し伝えるために選択することができます。"
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid ""
+"The donor's name has been added to your honor roll unless they asked not to "
+"be included."
+msgstr "表彰ロールに含まれいないよう求めていない限り、寄贈者名は表彰のロールに追加されます。"
+
+#: xml/templates/message_templates/pcp_owner_notify_subject.tpl
+msgid "Someone has just donated to your personal campaign page"
+msgstr "今、何方かが個人キャンペーンページで寄付しています"
+
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "Personal Campaign Page Owner Notification"
+msgstr "個人キャンペーン ページのオーナーへの通知"
+
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid "Your Personal Campaign Page"
@@ -762,8 +804,8 @@ msgstr "自分のページへ"
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
 msgid ""
-"When you view your campaign page WHILE LOGGED IN, the page includes links to edit\n"
-"your page, tell friends, and update your contact info."
+"When you view your campaign page WHILE LOGGED IN, the page includes links to"
+" edit your page, tell friends, and update your contact info."
 msgstr "ログインした状態で自分のキャンペーンページを表示すると、ページ編集、友人に紹介、連絡先情報の更新のリンクがページに表示されます。"
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
@@ -782,9 +824,10 @@ msgstr "質問があれば、メールをお送りください。"
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid ""
-"Your personal campaign page has been reviewed. There were some issues with the content\n"
-"which prevented us from approving the page. We are sorry for any inconvenience."
-msgstr "個人キャンペーンページのチェックを行った結果、若干内容的に問題があったため承認されませんでした。お手数をおかけして申し訳ありません。"
+"Your personal campaign page has been reviewed. There were some issues with "
+"the content which prevented us from approving the page. We are sorry for any"
+" inconvenience."
+msgstr "個人キャンペーンページが検討されています。若干内容に不備があるため承認できませんでした。ご不憫をお掛けして申し訳ありません。"
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -879,102 +922,42 @@ msgstr "このリンクをクリックするか、ブラウザに貼り付け、
 msgid "Click or paste this link into your browser"
 msgstr "このリンクをクリックするか、ブラウザに貼り付けてください"
 
-#: CRM/PCP/BAO/PCP.php
-msgid "URL for this Page"
-msgstr "このページのURL"
+#: CRM/PCP/DAO/PCP.php
+msgid "PCP Block"
+msgstr ""
 
-#: CRM/PCP/Page/PCPInfo.php
-msgid "Copy this link to share directly with your network!"
-msgstr "ネットワークで直接共有する場合は、このリンクをコピーしてください！"
+#: CRM/PCP/DAO/PCP.php
+msgid "Use Thermometer?"
+msgstr ""
 
-#: templates/CRM/PCP/Form/Campaign.tpl
-msgid ""
-"If this option is checked, an \"honor roll\" will be displayed with the "
-"names (or nicknames) of the people who supported you. (Donors will have the "
-"option to remain anonymous. Their names will NOT be listed.)"
-msgstr "このオプションをチェックすると、あなたを支援してくれた人々の名前 (またはニックネーム) が「表彰ロール」に表示されます。(寄贈者の名前を表示せず、匿名にすることもできます)"
+#: CRM/PCP/DAO/PCP.php
+msgid "Show Honor Roll?"
+msgstr ""
 
-#: CRM/PCP/BAO/PCP.php
-msgid "Owner Email Notification"
-msgstr "所有者のメール通知"
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"This event registration is being made thanks to the efforts of "
-"<strong>%1</strong>, who supports our campaign. "
-msgstr "このイベント登録は、私たちのキャンペーンをサポートしてくれている<strong>%1</strong>の努力によって作成されました。"
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"This contribution is being made thanks to the efforts of "
-"<strong>%1</strong>, who supports our campaign. "
-msgstr "この支援は、私たちのキャンペーンをサポートしてくれている<strong>%1</strong>の努力によって作成されました。"
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"Owner Notification is not set for this Personal Campaign Page. Please "
-"contact the site administrator if you need assistance."
-msgstr "この個人キャンペーンページにはオーナー通知が設定されていません。サイト管理者にお問い合わせください。"
+#: CRM/PCP/DAO/PCP.php
+msgid "Notify Owner?"
+msgstr ""
 
 #: CRM/PCP/DAO/PCPBlock.php
-msgid "Owner Notification"
-msgstr "オーナー通知"
+msgid "PCP Block ID"
+msgstr ""
 
-#: CRM/PCP/Form/Campaign.php
-msgid "Notify me via email when someone donates to my page"
-msgstr "自分のページに寄付があった場合はメールで通知"
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Target Entity"
+msgstr ""
 
-#: templates/CRM/PCP/Form/Campaign.tpl
-msgid ""
-"If this option is checked, you will receive an email notification when "
-"people contribute to your campaign."
-msgstr "このオプションを選択した場合、人々がキャンペーンに支援した際に、あなたはメールで通知を受信できます。"
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Target Entity ID"
+msgstr ""
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "You have received a donation at your personal page"
-msgstr "個人ページで寄付を受け取りました"
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Approval Required?"
+msgstr ""
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "Your fundraising total has been updated."
-msgstr "あなたの募金総額が更新されました。"
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Tell a Friend Enabled?"
+msgstr ""
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid ""
-"The donor's information is listed below.  You can choose to contact them and"
-" convey your thanks if you wish."
-msgstr "寄贈者の情報リストは以下のとおりです。希望する場合は、感謝を連絡し伝えるために選択することができます。"
-
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid ""
-"The donor's name has been added to your honor roll unless they asked not to "
-"be included."
-msgstr "表彰ロールに含まれいないよう求めていない限り、寄贈者名は表彰のロールに追加されます。"
-
-#: xml/templates/message_templates/pcp_owner_notify_subject.tpl
-msgid "Someone has just donated to your personal campaign page"
-msgstr "今、何方かが個人キャンペーンページで寄付しています"
-
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "Personal Campaign Page Owner Notification"
-msgstr "個人キャンペーン ページのオーナーへの通知"
-
-#: xml/templates/message_templates/pcp_status_change_html.tpl
-#: xml/templates/message_templates/pcp_status_change_text.tpl
-#: xml/templates/message_templates/pcp_supporter_notify_html.tpl
-#: xml/templates/message_templates/pcp_supporter_notify_text.tpl
-msgid ""
-"When you view your campaign page WHILE LOGGED IN, the page includes links to"
-" edit your page, tell friends, and update your contact info."
-msgstr "ログインした状態で自分のキャンペーンページを表示すると、ページ編集、友人に紹介、連絡先情報の更新のリンクがページに表示されます。"
-
-#: xml/templates/message_templates/pcp_status_change_html.tpl
-#: xml/templates/message_templates/pcp_status_change_text.tpl
-msgid ""
-"Your personal campaign page has been reviewed. There were some issues with "
-"the content which prevented us from approving the page. We are sorry for any"
-" inconvenience."
-msgstr "個人キャンペーンページが検討されています。若干内容に不備があるため承認できませんでした。ご不憫をお掛けして申し訳ありません。"
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Tell A Friend Limit"
+msgstr ""
